[gd_scene load_steps=63 format=2]

[ext_resource path="res://Fonts/noto_sans_48.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/noto_sans_64.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/noto_sans_32.tres" type="DynamicFont" id=3]
[ext_resource path="res://Textures/PauseButton.png" type="Texture" id=4]
[ext_resource path="res://Textures/BattleBG2.png" type="Texture" id=5]
[ext_resource path="res://Scene/story.tscn" type="PackedScene" id=6]
[ext_resource path="res://Wave1~3_Scene/Wave2.gd" type="Script" id=7]
[ext_resource path="res://BattleSystem/PauseScene.tscn" type="PackedScene" id=8]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt3.png" type="Texture" id=9]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt4.png" type="Texture" id=10]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt5.png" type="Texture" id=11]
[ext_resource path="res://AttackAnimation/Axe/Axe4.png" type="Texture" id=12]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt6.png" type="Texture" id=13]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt7.png" type="Texture" id=14]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt9.png" type="Texture" id=15]
[ext_resource path="res://AttackAnimation/Axe/Axe1.png" type="Texture" id=16]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt1.png" type="Texture" id=17]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt2.png" type="Texture" id=18]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt8.png" type="Texture" id=19]
[ext_resource path="res://AttackAnimation/Axe/Axe2.png" type="Texture" id=20]
[ext_resource path="res://AttackAnimation/Axe/Axe3.png" type="Texture" id=21]
[ext_resource path="res://AttackAnimation/Bomb/Retro Impact Effect Pack 5 D.png" type="Texture" id=22]
[ext_resource path="res://AttackAnimation/Balrog/Retro Impact Effect Pack 5 A.png" type="Texture" id=23]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt11.png" type="Texture" id=47]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt10.png" type="Texture" id=50]
[ext_resource path="res://AttackAnimation/DarkBolt/Dark-Bolt12.png" type="Texture" id=53]
[ext_resource path="res://Wave1~3_Scene/Wave2_Option_C.gd" type="Script" id=56]
[ext_resource path="res://Wave1~3_Scene/Wave2_Option_A.gd" type="Script" id=57]
[ext_resource path="res://Wave1~3_Scene/Wave2_Option_B.gd" type="Script" id=58]
[ext_resource path="res://Wave1~3_Scene/Wave2_Option_D.gd" type="Script" id=59]
[ext_resource path="res://Wave1~3_Scene/Wave2_Question.gd" type="Script" id=60]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.886275, 0.941176, 0.933333, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
corner_radius_bottom_right = 40

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.886275, 0.941176, 0.933333, 1 )
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=6]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=10]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.886275, 0.941176, 0.933333, 1 )
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=7]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=11]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=8]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=12]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=9]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="StyleBoxFlat" id=13]
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 0, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 64, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 128, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 192, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 256, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 320, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 384, 1152, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 23 )
region = Rect2( 448, 1152, 64, 64 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), null ],
"loop": false,
"name": "Balrog",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=41]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 50 ), ExtResource( 47 ), ExtResource( 53 ) ],
"loop": false,
"name": "DarkBolt",
"speed": 16.5
} ]

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 256, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 320, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 22 )
region = Rect2( 384, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=42]
animations = [ {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": false,
"name": "Bomb",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=43]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 12 ), null ],
"loop": false,
"name": "Axe",
"speed": 10.0
} ]

[node name="Wave2" type="Node"]
script = ExtResource( 7 )

[node name="BattleBackground" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )

[node name="PauseButton" type="TextureButton" parent="BattleBackground"]
margin_left = 1764.0
margin_top = 6.0
margin_right = 2276.0
margin_bottom = 518.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 4 )

[node name="Wave" type="Label" parent="BattleBackground"]
margin_left = 510.0
margin_top = 15.0
margin_right = 1410.0
margin_bottom = 165.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 4 )
text = "Wave 2/3"
align = 1
valign = 1

[node name="Question" type="Label" parent="BattleBackground"]
margin_left = 975.0
margin_top = 250.0
margin_right = 1875.0
margin_bottom = 591.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 4 )
align = 1
valign = 1
autowrap = true
script = ExtResource( 60 )

[node name="OpenStoryButton" type="Button" parent="BattleBackground/Question"]
margin_left = 624.0
margin_top = 335.0
margin_right = 900.0
margin_bottom = 399.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 5 )
text = "查看全文 ▼"

[node name="Enemy" type="Sprite" parent="BattleBackground/Question"]
position = Vector2( -487, 221 )
scale = Vector2( 0.562963, 0.521898 )

[node name="LabelBottomBackground" type="Label" parent="BattleBackground/Question"]
show_behind_parent = true
margin_top = 340.0
margin_right = 900.0
margin_bottom = 399.0
custom_styles/normal = SubResource( 26 )

[node name="Option_A" type="Button" parent="BattleBackground"]
margin_left = 45.0
margin_top = 720.0
margin_right = 945.0
margin_bottom = 870.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 6 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 3 )
clip_text = true
icon_align = 1
expand_icon = true
script = ExtResource( 57 )

[node name="Option_B" type="Button" parent="BattleBackground"]
margin_left = 975.0
margin_top = 720.0
margin_right = 1875.0
margin_bottom = 870.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 7 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 3 )
clip_text = true
icon_align = 1
expand_icon = true
script = ExtResource( 58 )

[node name="Option_C" type="Button" parent="BattleBackground"]
margin_left = 45.0
margin_top = 890.0
margin_right = 945.0
margin_bottom = 1040.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 8 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 3 )
clip_text = true
icon_align = 1
expand_icon = true
script = ExtResource( 56 )

[node name="Option_D" type="Button" parent="BattleBackground"]
margin_left = 975.0
margin_top = 890.0
margin_right = 1875.0
margin_bottom = 1040.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 9 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 3 )
clip_text = true
icon_align = 1
expand_icon = true
script = ExtResource( 59 )

[node name="WindowDialog" parent="BattleBackground" instance=ExtResource( 6 )]

[node name="PauseScene" parent="BattleBackground" instance=ExtResource( 8 )]
visible = false

[node name="ChangeLevelTimer" type="Timer" parent="BattleBackground"]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="BalrogAttackAnimation" type="AnimatedSprite" parent="BattleBackground"]
position = Vector2( 490, 470 )
scale = Vector2( 8.254, 7.854 )
frames = SubResource( 25 )
animation = "Balrog"

[node name="DarkBoltAttackAnimation" type="AnimatedSprite" parent="BattleBackground"]
position = Vector2( 490, 490 )
scale = Vector2( 5.422, 5.773 )
frames = SubResource( 41 )
animation = "DarkBolt"

[node name="BombAttackAnimation" type="AnimatedSprite" parent="BattleBackground"]
position = Vector2( 491, 470 )
scale = Vector2( 7.281, 7.633 )
frames = SubResource( 42 )
animation = "Bomb"

[node name="AxeAttackAnimation" type="AnimatedSprite" parent="BattleBackground"]
position = Vector2( 460, 417 )
scale = Vector2( 1, 1.162 )
frames = SubResource( 43 )
animation = "Axe"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="BattleBackground/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="BattleBackground/Question/OpenStoryButton" to="." method="_on_OpenStoryButton_pressed"]
[connection signal="pressed" from="BattleBackground/Option_A" to="." method="_on_Option_A_pressed"]
[connection signal="pressed" from="BattleBackground/Option_B" to="." method="_on_Option_B_pressed"]
[connection signal="pressed" from="BattleBackground/Option_C" to="." method="_on_Option_C_pressed"]
[connection signal="pressed" from="BattleBackground/Option_D" to="." method="_on_Option_D_pressed"]
[connection signal="timeout" from="BattleBackground/ChangeLevelTimer" to="." method="_on_ChangeLevelTimer_timeout"]
[connection signal="animation_finished" from="BattleBackground/BalrogAttackAnimation" to="." method="_on_BalrogAttackAnimation_animation_finished"]
[connection signal="animation_finished" from="BattleBackground/DarkBoltAttackAnimation" to="." method="_on_DarkBoltAttackAnimation_animation_finished"]
[connection signal="animation_finished" from="BattleBackground/BombAttackAnimation" to="." method="_on_BombAttackAnimation_animation_finished"]
[connection signal="animation_finished" from="BattleBackground/AxeAttackAnimation" to="." method="_on_AxeAttackAnimation_animation_finished"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
